feat: add styles for first screen

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,42 @@
 
     <!-- ***** Center Area Start ***** -->
     <main class="content-area">
+      <div class="content-area__wrapper">
+        <section class="content-form">
+
+          <div class="content-form__inner first-step">
+            <h1 class="content-form__title">Всего три простых шага для получения бонусов!</h1>
+          </div>
+
+          <div class="content-form__inner content-data">
+            <section class="form-area">
+              <form action="#">
+                <input class="custom-input" type="text" placeholder="Фамилия">
+                <input class="custom-input" type="text" placeholder="Имя">
+                <input class="custom-input" type="text" placeholder="Отчество">
+
+                <div class="radio-section negative-margin_top">
+                  <input type="radio" checked name="radio-group" id="male" class="radio-form">
+                  <label for="male">Мужчина</label>
+
+                  <input type="radio" name="radio-group" id="female" class="radio-form">
+                  <label for="female">Женщина</label>
+                </div>
+
+                <input class="custom-input" type="text" placeholder="Дата рождения">
+
+                <div class="access-section negative-margin_top">
+                  <input type="checkbox" name="access" id="access" value="">
+                  <label for="access">Соглашаюсь с условиями участия</label>
+                </div>
+
+                <button type="button" class="form-area__button custom-button">Продолжить</button>
+              </form>
+            </section>
+          </div>
+
+        </section>
+      </div>
     </main>
 
 
