--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,18 @@
 
     <!-- ***** Page Start ***** -->
     <div class="wrapper">
-     <!-- ***** Header Area Start ***** -->
 
+     <!-- ***** Header Area Start ***** -->
     <header class="on-main-page">
+      <a class="logotype" href="#" title="">На главную</a>
+      <nav class="navigation">
+        <a class="navigation-menu" href="#" title="">Главное меню</a>
+      </nav>
+      <div class="pagination-container">
+        <button class="pagination-item active-item">1</button>
+        <button class="pagination-item">2</button>
+        <button class="pagination-item">3</button>
+      </div>
     </header>
     <!-- ***** Header Area End ***** -->
 
@@ -54,7 +63,7 @@
                   <label for="access">Соглашаюсь с условиями участия</label>
                 </div>
 
-                <button type="button" class="form-area__button custom-button">Продолжить</button>
+                <button type="button" class="form-area__button custom-button">Продолжить <span class="arrow-button"></span></button>
               </form>
             </section>
           </div>
