--- a/src/index.html
+++ b/src/index.html
@@ -37,12 +37,12 @@
       <div class="content-area__wrapper">
         <section class="content-form">
 
-          <div class="content-form__inner first-step">
+          <div class="content-form__inner content-image">
             <h1 class="content-form__title">Всего три простых шага для получения бонусов!</h1>
           </div>
 
           <div class="content-form__inner content-data">
-            <section class="form-area">
+            <article class="form-area">
               <form action="#">
                 <input class="custom-input" type="text" placeholder="Фамилия">
                 <input class="custom-input" type="text" placeholder="Имя">
@@ -65,7 +65,7 @@
 
                 <button type="button" class="form-area__button custom-button">Продолжить <span class="arrow-button"></span></button>
               </form>
-            </section>
+            </article>
           </div>
 
         </section>
