refactor: rename styles, add consts

--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,9 @@
 
                 <input class="custom-input" type="text" placeholder="Дата рождения">
 
-                <div class="access-section negative-margin_top">
-                  <input type="checkbox" name="access" id="access" value="">
-                  <label for="access">Соглашаюсь с условиями участия</label>
+                <div class="agreement-section negative-margin_top">
+                  <input type="checkbox" name="agreement" id="agreement" value="">
+                  <label for="agreement">Соглашаюсь с условиями участия</label>
                 </div>
 
                 <button type="button" class="form-area__button custom-button">Продолжить <span class="arrow-button"></span></button>
