feat: add color schemes to template

--- a/src/index.html
+++ b/src/index.html
@@ -24,16 +24,16 @@
       <nav class="navigation">
         <a class="navigation-menu" href="#" title="">Главное меню</a>
       </nav>
-      <div class="pagination-container">
-        <button class="pagination-item active-item">1</button>
+      <div class="pagination-container color-scheme_third">
+        <button class="pagination-item">1</button>
         <button class="pagination-item">2</button>
-        <button class="pagination-item">3</button>
+        <button class="pagination-item active-item">3</button>
       </div>
     </header>
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Center Area Start ***** -->
-    <main class="content-area">
+    <main class="content-area color-scheme_third">
       <div class="content-area__wrapper">
         <section class="content-form">
 
