refactor: add color-scheme class to body

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 </head>
 
-<body>
+<body class="color-scheme_third">
     <!-- ***** Preloader Start ***** -->
     <div class="preloader">
         <div class="preloader-container"></div>
@@ -24,7 +24,7 @@
       <nav class="navigation">
         <a class="navigation-menu" href="#" title="">Главное меню</a>
       </nav>
-      <div class="pagination-container color-scheme_third">
+      <div class="pagination-container">
         <button class="pagination-item">1</button>
         <button class="pagination-item">2</button>
         <button class="pagination-item active-item">3</button>
@@ -33,7 +33,7 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Center Area Start ***** -->
-    <main class="content-area color-scheme_third">
+    <main class="content-area">
       <div class="content-area__wrapper">
         <section class="content-form">
 
