--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 </head>
 
-<body class="color-scheme_third">
+<body>
     <!-- ***** Preloader Start ***** -->
     <div class="preloader">
         <div class="preloader-container"></div>
@@ -18,65 +18,26 @@
     <!-- ***** Page Start ***** -->
     <div class="wrapper">
 
-     <!-- ***** Header Area Start ***** -->
-    <header class="on-main-page">
-      <a class="logotype" href="#" title="">На главную</a>
-      <nav class="navigation">
-        <a class="navigation-menu" href="#" title="">Главное меню</a>
-      </nav>
-      <div class="pagination-container">
-        <button class="pagination-item">1</button>
-        <button class="pagination-item">2</button>
-        <button class="pagination-item active-item">3</button>
-      </div>
-    </header>
-    <!-- ***** Header Area End ***** -->
+      <!-- ***** Header Area Start ***** -->
+      <header class="on-main-page">
+        <a class="logotype" href="#" title="">На главную</a>
+        <nav class="navigation">
+          <a class="navigation-menu" href="#" title="">Главное меню</a>
+        </nav>
+        <div class="pagination-container">
+          <button data-name="scheme-first" class="pagination-item">1</button>
+          <button data-name="scheme-second" class="pagination-item">2</button>
+          <button data-name="scheme-third" class="pagination-item">3</button>
+        </div>
+      </header>
+      <!-- ***** Header Area End ***** -->
 
-    <!-- ***** Center Area Start ***** -->
-    <main class="content-area">
-      <div class="content-area__wrapper">
-        <section class="content-form">
-
-          <div class="content-form__inner content-image">
-            <h1 class="content-form__title">Всего три простых шага для получения бонусов!</h1>
-          </div>
-
-          <div class="content-form__inner content-data">
-            <article class="form-area">
-              <form action="#">
-                <input class="custom-input" type="text" placeholder="Фамилия">
-                <input class="custom-input" type="text" placeholder="Имя">
-                <input class="custom-input" type="text" placeholder="Отчество">
-
-                <div class="radio-section negative-margin_top">
-                  <input type="radio" checked name="radio-group" id="male" class="radio-form">
-                  <label for="male">Мужчина</label>
-
-                  <input type="radio" name="radio-group" id="female" class="radio-form">
-                  <label for="female">Женщина</label>
-                </div>
-
-                <input class="custom-input" type="text" placeholder="Дата рождения">
-
-                <div class="agreement-section negative-margin_top">
-                  <input type="checkbox" name="agreement" id="agreement" value="">
-                  <label for="agreement">Соглашаюсь с условиями участия</label>
-                </div>
-
-                <button type="button" class="form-area__button custom-button">Продолжить <span class="arrow-button"></span></button>
-              </form>
-            </article>
-          </div>
-
-        </section>
-      </div>
-    </main>
-
-
-    <!-- ***** Footer Area Start ***** -->
-    <footer class="footer-area">
-    </footer>
-    <!-- ***** Footer Area End ***** -->
+      <!-- ***** Center Area Start ***** -->
+      <main class="content-area">
+        <div class="content-area__wrapper">
+          <!-- Content -->
+        </div>
+      </main>
 
     </div>
 </body>
