--- a/src/index.html
+++ b/src/index.html
@@ -24,18 +24,14 @@
         <nav class="navigation">
           <a class="navigation-menu" href="#" title="">Главное меню</a>
         </nav>
-        <div class="pagination-container">
-          <button data-name="scheme-first" class="pagination-item">1</button>
-          <button data-name="scheme-second" class="pagination-item">2</button>
-          <button data-name="scheme-third" class="pagination-item">3</button>
-        </div>
+        <!-- Navigation -->
       </header>
       <!-- ***** Header Area End ***** -->
 
       <!-- ***** Center Area Start ***** -->
       <main class="content-area">
         <div class="content-area__wrapper">
-          <!-- Content -->
+          <!-- Form -->
         </div>
       </main>
 
